Updated player & increased performance